--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,3 @@
-# VideoSubFinder Python实现依赖包
-# 核心依赖
-opencv-python>=4.5.0
-numpy>=1.20.0
-
-# 可选依赖 (用于更好的性能)
-# opencv-contrib-python>=4.5.0  # 包含额外的OpenCV模块
-# numba>=0.50.0                 # JIT编译加速
-# cupy-cuda11x>=8.0.0           # GPU加速 (需要CUDA)
-
-# 开发和测试依赖
-pytest>=6.0.0
-pytest-cov>=2.10.0
+omegaconf
+numpy
+opencv-python
